[ios] Fix tab strip rtl long press frame.

Bug: 865119
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: Ic2a6fdb250075d14306eb4f581b8443f05632d8f
Reviewed-on: https://chromium-review.googlesource.com/1145851
Commit-Queue: Justin Cohen <justincohen@chromium.org>
Reviewed-by: Rohit Rao <rohitrao@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577088}
Former-commit-id: 7d4ead66ffa0647fe19506b55e4d439bbd1e6b99